Rewrite RadioMod for Forge 1.12.2
Complete rewrite from 1.20.1 to 1.12.2 API:
- ForgeGradle 2.3 + MCP snapshot mappings
- @SidedProxy pattern (ClientProxy/CommonProxy)
- RegistryEvent for block/item/model registration
- TileEntity + IGuiHandler + Container + GuiContainer
- SimpleNetworkWrapper for packets
- .lang files, mcmod.info, textures/blocks/ paths
- JLayer bundled via jar task (no JarJar)
- Same features: MP3 streaming, distance volume, YouTube via yt-dlp
- Java 8 compatible