@@ -1,7 +1,7 @@
 package com.wenz.radiomod.client.audio;
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 
 import java.io.*;
 import java.net.*;
@@ -12,30 +12,25 @@ import java.util.regex.*;
  * Direct HTTP links (radio stations, hitmos.me, etc.) pass through unchanged.
  */
 public class StreamResolver {
-    private static final Logger LOG = LoggerFactory.getLogger("RadioMod");
+    private static final Logger LOG = LogManager.getLogger("RadioMod");
 
     public static String resolve(String url) {
-        if (url == null || url.isBlank()) return url;
+        if (url == null || url.trim().isEmpty()) return url;
 
         if (isYouTube(url)) {
             LOG.info("[RadioMod] YouTube detected, extracting audio...");
 
-            // Try yt-dlp first (most reliable)
             String ytdlp = tryYtDlp(url);
             if (ytdlp != null) return ytdlp;
 
-            // Try built-in extractor
             String builtin = tryBuiltinYouTube(url);
             if (builtin != null) return builtin;
 
             LOG.warn("[RadioMod] YouTube extraction failed. Install yt-dlp for YouTube support.");
         }
 
-        // Direct URL — pass through
         return url;
     }
-
-    /* -------- YouTube detection -------- */
 
     private static boolean isYouTube(String url) {
         return url.contains("youtube.com") || url.contains("youtu.be");
@@ -51,8 +46,6 @@ public class StreamResolver {
         return null;
     }
 
-    /* -------- yt-dlp (external tool) -------- */
-
     private static String tryYtDlp(String url) {
         try {
             ProcessBuilder pb = new ProcessBuilder(
@@ -62,10 +55,9 @@ public class StreamResolver {
             Process proc = pb.start();
 
             String result;
-            try (BufferedReader r = new BufferedReader(
-                    new InputStreamReader(proc.getInputStream()))) {
-                result = r.readLine();
-            }
+            BufferedReader r = new BufferedReader(new InputStreamReader(proc.getInputStream()));
+            result = r.readLine();
+            r.close();
 
             int exit = proc.waitFor();
             if (exit == 0 && result != null && result.startsWith("http")) {
@@ -80,16 +72,13 @@ public class StreamResolver {
         return null;
     }
 
-    /* -------- Built-in YouTube extractor (fallback) -------- */
-
     private static String tryBuiltinYouTube(String url) {
         try {
             String videoId = extractVideoId(url);
             if (videoId == null) return null;
 
             HttpURLConnection conn = (HttpURLConnection)
-                    new URI("https://www.youtube.com/watch?v=" + videoId)
-                            .toURL().openConnection();
+                    new URL("https://www.youtube.com/watch?v=" + videoId).openConnection();
             conn.setRequestProperty("User-Agent",
                     "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36");
             conn.setRequestProperty("Accept-Language", "en-US,en;q=0.9");
@@ -97,15 +86,13 @@ public class StreamResolver {
             conn.setReadTimeout(8000);
 
             StringBuilder sb = new StringBuilder();
-            try (BufferedReader r = new BufferedReader(
-                    new InputStreamReader(conn.getInputStream()))) {
-                String line;
-                while ((line = r.readLine()) != null) sb.append(line);
-            }
+            BufferedReader r = new BufferedReader(new InputStreamReader(conn.getInputStream()));
+            String line;
+            while ((line = r.readLine()) != null) sb.append(line);
+            r.close();
 
             String html = sb.toString();
 
-            // Look for streamingData in ytInitialPlayerResponse
             Matcher m = Pattern.compile(
                     "ytInitialPlayerResponse\\s*=\\s*(\\{.+?\\})\\s*;\\s*var"
             ).matcher(html);
@@ -113,7 +100,6 @@ public class StreamResolver {
 
             String json = m.group(1);
 
-            // Extract audio URL — prefer itag 140 (M4A 128k) or 251 (Opus)
             for (String itag : new String[]{"140", "251", "250", "249"}) {
                 Pattern p = Pattern.compile(
                         "\"itag\"\\s*:\\s*" + itag + ".*?\"url\"\\s*:\\s*\"([^\"]+)\"");
